# fintools_skills

./: .gitignore
docs/: create_skill_prd.md  (+1 more)
fintools-client-backtests-skill  /backtests/backend/: .gitignore  __init__.py  akshare_integration_summary.md  cleanup_report.md  data_source_migration_report.md  pyproject.toml
fintools-client-backtests-skill  /backtests/backend/backups/backup_20260207_201912/json_export/: simulator_trading.json
fintools-client-backtests-skill  /backtests/backend/data_processing/data_provider/: akshare.py  data_provider_factory.py  mairui.py
fintools-client-backtests-skill  /backtests/backend/data_processing/update_stocks/: download_mydata.py  download_mydata_util.py  remove_staled_stocks.py  update_all_stocks_list.py
fintools-client-backtests-skill  /backtests/backend/db/: models.py
fintools-client-backtests-skill  /backtests/backend/db/mysql/: db_schema.sql
fintools-client-backtests-skill  /backtests/backend/db/sqlite/: __init__.py  db_schemas_dynamic.py
fintools-client-backtests-skill  /backtests/backend/docs/specs/00_Overview/: PROJECT.md
fintools-client-backtests-skill  /backtests/backend/end_points/: init_global.py  main.py
fintools-client-backtests-skill  /backtests/backend/end_points/get_earn/: __init__.py
fintools-client-backtests-skill  /backtests/backend/end_points/get_rule/: get_rule_routes.py  rule_schema.py
fintools-client-backtests-skill  /backtests/backend/end_points/get_simulator/: get_simulator_routes.py
fintools-client-backtests-skill  /backtests/backend/scripts/: export_database.py  import_data.py
(+264 files in other folders)
